# gridAware

./: .env.example  .gitignore  README.md  plan.md  pyproject.toml
docs/: agents.md  current_topology_view.md  planner_agent_reference.md  tools.md  two_scenario_design_spec.md
scripts/: run_analyzer.py  run_planner.py  run_simulator.py
src/gridaware/: __init__.py  actions.py  agent_tools.py  api.py  candidate_builder.py  cli.py  models.py  orchestrator.py  pandapower_simulator.py  planner_coverage.py  scenarios.py  simulator.py  tool_executor.py  topology.py  ui.py  workflow.py
src/gridaware/agents/: __init__.py  analyzer.py  models.py  planner.py  prompts.py  responses_runner.py  simulator.py
src/gridaware/static/: icons.js  index.html  topology.css  topology.js
tests/: test_agent_tools.py  test_analyzer_models.py  test_orchestrator.py  test_pandapower_simulator.py  test_planner_agent.py  test_planner_coverage.py  test_planner_models.py  test_responses_runner.py  test_scenarios.py  test_simulator_agent.py  test_topology.py  test_workflow.py
