[project]
name = "gridaware"
version = "0.1.0"
description = "Grid-aware AI agent MVP for data center load optimization."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.115.0",
    "langgraph>=0.2.60",
    "openai>=1.59.0",
    "pandapower>=2.14.11",
    "pydantic>=2.10.0",
    "python-dotenv>=1.0.1",
    "streamlit>=1.41.0",
    "uvicorn[standard]>=0.34.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "ruff>=0.8.0",
]

[project.scripts]
gridaware-demo = "gridaware.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gridaware"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = [".git", ".ruff_cache", ".uv-cache", ".venv", "build", "dist"]
